--- a/index.html
+++ b/index.html
@@ -3,10 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COD Mobile</title>
+    <title>NBA</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <a href="historia.html">História</a>
+            </li>
+            <li>
+                <a href="times.html">Times</a>
+            </li>
+            <li>
+                <a href="jogadores.html">Jogadores</a>
+            </li>
+        </ul>
+    </nav>
+
+    <header>
+        <div class="center">
+            <img src="Imagens/nba-logo.png" alt="NBA Logo"></img>
+        </div>
+        <h1>NBA<h1>
+    </header>
+
+    <main>
+        <section>
+            <p>
+                A National Basketball Association (em português: Associação Nacional de Basquetebol; abreviação oficial: NBA) é a principal liga de basquetebol profissional da América do Norte. Com 30 franquias (29 nos Estados Unidos e 1 no Canadá), a NBA também é considerada a principal liga de basquete do mundo. É um membro ativo da USA Basketball (USAB),[2] que é reconhecida pela FIBA (a Federação Internacional de Basquetebol) como a entidade máxima e organizadora do basquetebol nos Estados Unidos. A NBA é uma das 4 'major leagues' de esporte profissional na América do Norte. Os jogadores da NBA são os atletas mais bem pagos do mundo, por salário médio anual.[3]
+
+A liga foi fundada na cidade de Nova Iorque em 6 de Junho de 1946, como a Basketball Association of America (BAA).[4] A liga adotou o nome de National Basketball Association em 1949 quando se fundiu com a rival National Basketball League (NBL). A liga tem diversos escritórios ao redor do mundo, além de vários dos próprios clubes fora da sede principal na Olympic Tower localizada na Quinta Avenida 645. Os estúdios da NBA Entertainment e da NBA TV são localizados em Secaucus, Nova Jérsia.
+
+Atualmente a liga é transmitida em Portugal pela Sport TV e pela NBA TV, e no Brasil pela Band na TV aberta, e pela ESPN e SporTV na TV fechada, além de transmissões em três canais do YouTube (NBA Brasil, Budweiser Brasil e TNT Sports Brasil) e na Twitch (Gaules). Nos Estados Unidos, as emissoras são NBA TV, TNT e ESPN, além da transmissão dos principais jogos pela ABC. O pacote NBA League Pass, que permite ao assinante assistir todos os jogos da liga ao vivo e em alta definição, é disponibilizado para assinatura em todo o mundo.
+            </p>
+        </section>
+    </main>
+
+    <footer>
+        <a>
+            <img src="/Imagens/instagram-logo.jpg" alt="Instagram Logo"></img>
+            <p>Instagram</p>
+        </a>
+    </footer>
 </body>
 </html>
