--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <main>
         <section>
+            <h2>O Que é a NBA?</h2>
             <p>
                 A National Basketball Association (em português: Associação Nacional de Basquetebol; abreviação oficial: NBA) é a principal liga de basquetebol profissional da América do Norte. Com 30 franquias (29 nos Estados Unidos e 1 no Canadá), a NBA também é considerada a principal liga de basquete do mundo. É um membro ativo da USA Basketball (USAB),[2] que é reconhecida pela FIBA (a Federação Internacional de Basquetebol) como a entidade máxima e organizadora do basquetebol nos Estados Unidos. A NBA é uma das 4 'major leagues' de esporte profissional na América do Norte. Os jogadores da NBA são os atletas mais bem pagos do mundo, por salário médio anual.[3]
 
@@ -41,9 +42,11 @@ Atualmente a liga é transmitida em Portugal pela Sport TV e pela NBA TV, e no B
     </main>
 
     <footer>
-        <a>
-            <img src="/Imagens/instagram-logo.jpg" alt="Instagram Logo"></img>
+        <a href="https://www.instagram.com/nba/">
+            <div class="center">
+            <img src="Imagens/instagram-logo.jpg" alt="Instagram Logo"></img>
             <p>Instagram</p>
+            </div>
         </a>
     </footer>
 </body>
