--- a/times.html
+++ b/times.html
@@ -33,6 +33,7 @@
     <main>
         <section class="conferencia leste">
             <h2>Conferência Leste</h2>
+            <h3>Divisão do Atlântico</h3>
             <ul>
                 <li>
                     <a href="https://www.espn.com.br/nba/time/_/nome/bos/boston-celtics">
@@ -74,6 +75,160 @@
                             <p>Toronto Raptors</p>
                         </div>
                     </a>
+                </li>
+            </ul>
+            <h3>Divisão Central</h3>
+            <ul>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/mil/milwaukee-bucks">
+                        <div>
+                            <img src="Imagens/Milwaukee Bucks.png" alt="Logo Milwaukee Bucks">
+                            <p>Milwaukee Bucks</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/cle/cleveland-cavaliers">
+                        <div>
+                            <img src="Imagens/Cleveland Cavaliers.png" alt="Logo Cleveland Cavaliers">
+                            <p>Cleveland Cavaliers</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/chi/chicago-bulls">
+                        <div>
+                            <img src="Imagens/Chicago Bulls.png" alt="Logo Chicago Bulls">
+                            <p>Chicago Bulls</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/ind/indiana-pacers">
+                        <div>
+                            <img src="Imagens/Indiana Pacers.png" alt="Logo Indiana Pacers">
+                            <p>Indiana Pacers</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/det/detroit-pistons">
+                        <div>
+                            <img src="Imagens/Detroit Pistons.png" alt="Logo Detroit Pistons">
+                            <p>Detroit Pistons</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+            <h3>Divisão Sudeste</h3>
+            <ul>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/mia/miami-heat">
+                        <div>
+                            <img src="Imagens/Miami Heat.png" alt="Logo Miami Heat">
+                            <p>Miami Heat</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/atl/atlanta-hawks">
+                        <div>
+                            <img src="Imagens/Atlanta Hawks.png" alt="Logo Atlanta Hawks">
+                            <p>Atlanta Hawks</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/wsh/washington-wizards">
+                        <div>
+                            <img src="Imagens/Washington Wizards.png" alt="Logo Washington wizards">
+                            <p>Washington Wizards</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/orl/orlando-magic">
+                        <div>
+                            <img src="Imagens/Orlando Magic.png" alt="Logo Orlando Magic">
+                            <p>Orlando Magic</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/cha/charlotte-hornets">
+                        <div>
+                            <img src="Imagens/Charlotte  Hornets.png" alt="Logo Charlotte Hornets">
+                            <p>Charlotte Hornets</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <section class="conferencia oeste">
+            <h2>Conferência Oeste</h2>
+            <h3>Divisão Nordeste</h3>
+            <ul>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/den/denver-nuggets">
+                        <div>
+                            <img src="Imagens/Denver Nuggets.png" alt="Logo Denver Nuggets">
+                            <p>Denver Nuggets</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/min/minnesota-timberwolves">
+                        <div>
+                            <img src="Imagens/Logo Minnesota Timberwolves.png" alt="Logo Minnesota Timberwolves">
+                            <p>Minnesota Timberwolves</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/okc/oklahoma-city-thunder">
+                        <div>
+                            <img src="Imagens/Oklahoma City Thunder.png" alt="Logo Oklahoma City Thunder">
+                            <p>Oklahoma City Thunder</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/utah/utah-jazz">
+                        <div>
+                            <img src="Imagens/Utah Jazz.png" alt="Logo Utah Jazz">
+                            <p>Utah Jazz</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/por/portland-trail-blazers">
+                        <div>
+                            <img src="Imagens/Portland Trail Blazers.png" alt="Logo Portland Trail Blazers">
+                            <p>Portland Trail Blazers</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+            <h3>Divisão do Pacífico</h3>
+            <ul>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/sac/sacramento-kings">
+                        <div>
+                            <img src="Imagens/Logo Sacramento Kings.png" alt="Logo Sacramento Kings">
+                            <p>Sacramento Kings</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/phx/phoenix-suns">
+                        <div>
+                            <img src="Imagens/Phoenix Suns.png" alt="Logo Phoenix Suns">
+                            <p>Phoenix Suns</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    
                 </li>
             </ul>
         </section>
