--- a/times.html
+++ b/times.html
@@ -228,7 +228,71 @@
                     </a>
                 </li>
                 <li>
-                    
+                    <a href="https://www.espn.com.br/nba/time/_/nome/lac/la-clippers">
+                        <div>
+                            <img src="Imagens/La Clipers.png" alt="Logo LA Clipers">
+                            <p>LA Clippers</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/gs/golden-state-warriors">
+                        <div>
+                            <img src="Imagens/Golden State.png" alt=" Logo Golden State">
+                            <p>Golden State Warriors</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/lal/los-angeles-lakers">
+                        <div>
+                            <img src="Imagens/Los Angeles Lakers.png" alt="Logo Los Angees Lakers">
+                            <p>Los Angeles Lakers</p>
+                        </div>
+                    </a>
+                </li>
+            </ul>
+            <h3>Divisão Sudoeste</h3>
+            <ul>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/mem/memphis-grizzlies">
+                        <div>
+                            <img src="Imagens/Memphis Grizzlies.png" alt="Logo Memphis Grizzlies">
+                            <p>Memphis Grizzlies</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/no/new-orleans-pelicans">
+                        <div>
+                            <img src="Imagens/New Orleans Pelicans.png" alt="Logo New Orleans Pelicans">
+                            <p>New Orleans Pelicans</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/dal/dallas-mavericks">
+                        <div>
+                            <img src="Imagens/Dallas Mavericks.png" alt="Logo Dallas Mavericks">
+                            <p>Dallas Mavericks</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/hou/houston-rockets">
+                        <div>
+                            <img src="Imagens/Houston Rockets.png" alt="Logo Hounston Rockets">
+                            <p>Hounston Rockets</p>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.espn.com.br/nba/time/_/nome/sa/san-antonio-spurs">
+                        <div>
+                            <img src="Imagens/San Antonio Spurs.png" alt="Logo San Antonio Spurs">
+                            <p>San Antonio Spurs</p>
+                        </div>
+                    </a>
                 </li>
             </ul>
         </section>
