--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,6 +24,11 @@
     <header>
         <div class="center">
             <img src="Imagens/nba-logo.png" alt="NBA Logo"></img>
+        </div>
+        <div class="search-box">
+            <input type="text" class="search-txt" placeholder="Pesquisar">
+            <a href="https://www.espn.com.br/nba/">
+            </a>
         </div>
         <h1>NBA<h1>
     </header>
